--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.28.0",
+    "dayjs": "^1.11.19",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.5",
+    "sass": "^1.93.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
