--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "antd": "^5.28.0",
     "dayjs": "^1.11.19",
     "react": "^18.3.1",
